--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -93,6 +93,7 @@
   max-height: none;
   transition: max-height 500ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
   box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175);
+  padding-top: 5px;
 }
 
 #content-nav #nav-search-close {
@@ -776,7 +777,7 @@ body{
   //   height: 10em;
   // }
   #content-nav {
-    background: linear-gradient(to bottom, #fff 0px,#fff 65px, #ddd 55px);
+    background: linear-gradient(to bottom, #fff 0px,#fff 70px, #ddd 55px);
   }
   .mobile-header {
     border-right: 1px solid #337ab7;
@@ -865,7 +866,7 @@ body{
   }
   #content-nav #nav-search-close {
       top: -67px;
-      left: 10em;
+      left: 12em;
   }
   #content-nav #search-input .search-button {
       top: -3.3em;
