equalize gaps between buttons on mobile

--- a/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
@@ -3,7 +3,7 @@
 }
 
 .info-section {
-  padding: 13px 0 13px 0;
+  padding: 0px 0 13px 0;
   height: 20em;
   margin-bottom: 0.5em;
 }
@@ -152,6 +152,9 @@
   background: #001c36 !important;
   color: #fff !important;
 }
+.action-btns-last {
+  margin-bottom: 7px;
+}
 
 @media screen and (min-width: 768px) {
   .action-btns {
@@ -180,6 +183,12 @@
     padding: 13px 0 13px 0;
     height: 8em;
     margin-bottom: 0.5em;
+  }
+  .info-section {
+    padding: 13px 0 13px 0;
+  }
+  .action-btns-last {
+    margin-bottom: 5px;
   }
 }
 
