--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -10583,22 +10583,6 @@ table.caption {
   padding: 0 !important;
 }
 
-.hero-caption {
-  color: #fff;
-  right: 0;
-  bottom: 0;
-  position: static !important;
-  background: #000;
-  margin: 0;
-  font-size: 16.1px;
-  font-weight: 100;
-  padding: 2%;
-  background: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  width: 100%;
-  bottom: auto !important;
-}
-
 .action-btns {
   display: table;
   font-weight: 400 !important;
@@ -10615,10 +10599,6 @@ table.caption {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
-}
-
-.hero-caption h2 {
-  color: white;
 }
 
 .action-btns-last {
@@ -10687,14 +10667,8 @@ table.caption {
     font-size: 1.5em;
   }
 
-  .hero-caption {
-    width: 40%;
-    float: right;
-    position: absolute !important;
-    top: inherit;
-    right: 0;
-    left: auto;
-    bottom: 0 !important;
+  .action-btns-last {
+    margin-bottom: 5px;
   }
 }
 .presidentmessagecontainer {
@@ -10930,6 +10904,35 @@ hr.style-one {
   margin-bottom: 0px;
 }
 
+.hero-caption {
+  color: #fff;
+  right: 0;
+  bottom: 0;
+  position: static !important;
+  background: #000;
+  margin: 0;
+  font-size: 16.1px;
+  font-weight: 100;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  bottom: auto !important;
+  padding: 2%;
+}
+.hero-caption h1, .hero-caption h2, .hero-caption h3, .hero-caption h4, .hero-caption h5, .hero-caption h6 {
+  color: #fff;
+}
+
+@media screen and (min-width: 992px) {
+  .hero-caption {
+    width: 40%;
+    float: right;
+    position: absolute !important;
+    top: inherit;
+    right: 0;
+    left: auto;
+    bottom: 0 !important;
+  }
+}
 .byline,
 .location {
   color: #1E1E1E;
