--- a/development/terminalfour/src/html/includes/page-hero.html
+++ b/development/terminalfour/src/html/includes/page-hero.html
@@ -1,5 +1,7 @@
-<div class="hero">
-<img class="img-responsive" src="http://sitemanager.msudenver.edu/media/content/wcms/departmentsiteguidelines/header_image.png" alt="work study help desk" style="   " />
-  <div class="hero-caption"><p>Body of Page Hero Image Content Type</p>
-<p>Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. <br /><br /></p></div>
+<div class="col-xs-12">
+  <div class="hero">
+  <img class="img-responsive" src="http://msudenver.edu/media/content/admissions/images/SSB2_web.jpg" alt="work study help desk" style="   " />
+    <div class="hero-caption"><h3>Body of Page Hero Image Content Type</h3>
+  <p>Praesent mauris. Fusce nec tellus sed augue semper porta.</p></div>
+  </div>
 </div>
