center images on Highlight Box content type

--- a/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
@@ -21,6 +21,10 @@
   font-size: 1em
 }
 
+.HighlightBox .img-responsive {
+  margin: auto;
+}
+
 // .linkcolumn .HighlightBox {
 //   margin: 0 0 1em;
 //   background: #c0392b;
