--- a/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
@@ -29,7 +29,7 @@
 .info-box-lower {
   width: 100%;
   color: #003a6e !important;
-  height: 33%;
+  height: 6.35em;
   z-index: 100;
   line-height: 1.5em;
   margin: 0em 0em 0.5em 0em;
@@ -138,6 +138,10 @@
   margin-bottom: 7px;
 }
 
+.infobox-last-row {
+  max-height: 13em;
+}
+
 @media screen and (min-width: 768px) {
   .action-btns {
     font-size: 2.5vw;
@@ -152,6 +156,7 @@
   .info-box-lower {
     width: 48.7%;
     margin-right: 0.5rem;
+    height: 4.05em;
   }
 
   .tool {
@@ -171,6 +176,9 @@
   }
   .action-btns-last {
     margin-bottom: 5px;
+  }
+  .infobox-last-row {
+    max-height: 5em;
   }
 }
 
