--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -10503,7 +10503,7 @@ table.caption {
 .info-box-lower {
   width: 100%;
   color: #003a6e !important;
-  height: 33%;
+  height: 6.35em;
   z-index: 100;
   line-height: 1.5em;
   margin: 0em 0em 0.5em 0em;
@@ -10615,6 +10615,10 @@ table.caption {
   margin-bottom: 7px;
 }
 
+.infobox-last-row {
+  max-height: 13em;
+}
+
 @media screen and (min-width: 768px) {
   .action-btns {
     font-size: 2.5vw;
@@ -10629,6 +10633,7 @@ table.caption {
   .info-box-lower {
     width: 48.7%;
     margin-right: 0.5rem;
+    height: 4.05em;
   }
 
   .tool {
@@ -10651,6 +10656,10 @@ table.caption {
 
   .action-btns-last {
     margin-bottom: 5px;
+  }
+
+  .infobox-last-row {
+    max-height: 5em;
   }
 }
 @media screen and (min-width: 992px) {
