--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7423,32 +7423,11 @@ header {
   transition: all 0.5s ease-in-out;
 }
 
-.fac-staf-stu-mobile {
-  padding-left: 20px !important;
-  font-weight: 500;
-  line-height: 2.5em;
-}
-
-#nav-faculty, #nav-academics, #nav-alumni {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
-.pushdown-alumni {
-  padding-left: 1.2em !important;
-}
-
 .navbar {
   border: 0;
   margin-bottom: 0;
-  background: #000;
-  z-index: 9999;
-}
-.navbar button.navbar-toggle {
-  color: #fff;
-  font-size: 25px;
-  background-color: #003a6e;
   border-radius: 0px;
+  background: #fff;
 }
 .navbar ul li {
   font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -7470,23 +7449,6 @@ header {
   padding-left: 0;
 }
 
-.pushdown-menu {
-  font-size: 0.8em;
-  padding-top: 10px;
-  padding-bottom: 0px;
-  text-decoration: none;
-  text-align: left;
-  list-style-type: inherit;
-  padding-left: 0.5em;
-  text-indent: -0.6em;
-  display: none;
-  border-right: 1px solid black;
-  border-spacing: 10px;
-  margin-top: 1.8em;
-  margin-bottom: 0.5em;
-  line-height: 2em;
-}
-
 .nav > a > li {
   display: inline;
   line-height: 50px;
@@ -7495,159 +7457,11 @@ header {
   padding-bottom: 8px;
 }
 
-#content-nav {
-  background-color: #fff;
-  max-height: none;
-  transition: max-height 500ms cubic-bezier(0.42, 0, 0.58, 1);
-  box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175);
-}
-
-#content-nav #nav-search-close {
-  position: relative;
-  top: -78px;
-  left: 50em;
-  color: #007dc3;
-  cursor: pointer;
-  font-size: 1.3em;
-}
-
-#content-nav .search-input-desktop {
-  display: none;
-  position: absolute;
-}
-
-#content-nav #search-input div {
-  padding-right: 0 !important;
-  top: 3px !important;
-}
-
-#content-nav #search-input input[type=text] {
-  display: inline-block;
-  height: 50px;
-  width: 32em;
-  border: none;
-  color: #6E6E6E;
-  border: 2px solid #fff;
-  border-radius: 5px 5px 5px 5px;
-  background-color: #fff;
-}
-
-#content-nav #search-input .search-button {
-  display: inline-block;
-  padding-left: 10px;
-  top: -3.3em;
-  left: 24em;
-  position: relative;
-  height: 2.8em;
-  width: 8.0em;
-  background-color: #007dc3;
-  border-radius: 2;
-  letter-spacing: 5px;
-  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-}
-
-#content-nav #search-input .search-button:hover {
-  color: #fff;
-  background-color: #00447c;
-}
-#content-nav #search-input .search-button:hover ::-webkit-input-placeholder {
-  color: #fff;
-  background-color: #00447c;
-}
-#content-nav #search-input .search-button:hover :-moz-placeholder {
-  /* Firefox 18- */
-  color: gray;
-}
-#content-nav #search-input .search-button:hover ::-moz-placeholder {
-  /* Firefox 19+ */
-  color: gray;
-}
-#content-nav #search-input .search-button:hover :-ms-input-placeholder {
-  color: gray;
-}
-
-.search-button {
-  height: 35px;
-  line-height: 35px;
-  display: block;
-  border-radius: 4px;
-  text-transform: uppercase;
-  text-align: center;
-  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
-  letter-spacing: 1.2px;
-  color: #fff;
-  border: 0;
-}
-
-.search-button:hover {
-  text-decoration: none;
-  color: #FFF;
-  cursor: pointer;
-  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.search-button:focus {
-  text-decoration: none;
-  color: #FFF;
-}
-
-.fa-search {
-  color: #007dc3 !important;
-  font-size: 1.2em;
-  cursor: pointer;
-}
-
-#nav-search a {
-  background: #005fae;
-}
-#nav-search .fa-search {
-  color: #fff !important;
-}
-
-.fa-search-opened {
-  color: #717171 !important;
-  padding-top: 10px;
-  font-size: 1.2em;
-  padding-right: 30px;
-  padding-left: 20px;
-  padding-bottom: 12px;
-  top: 0.77em;
-  border-radius: 5px 0 0 5px;
-  cursor: unset;
-}
-
 /* enable absolute positioning */
-.inner-addon {
-  position: relative;
-}
-
 /* style glyph */
-.inner-addon .fa-search {
-  position: absolute;
-  padding: 0.9em 1em 1em 3em;
-  pointer-events: none;
-}
-
 /* align glyph */
-.left-addon .fa-search {
-  left: 0.3em;
-  top: -0.45em;
-}
-
 /* add padding  */
-.left-addon input {
-  padding-left: 8em;
-  width: 101%;
-}
-
 /* add back pointer functionality for x-out button  */
-.fa-close {
-  pointer-events: all !important;
-}
-
 .apply-button {
   background: #d11242;
   color: #fff;
@@ -7727,126 +7541,9 @@ header {
 }
 
 .msudenver_logo {
-  margin-top: 15px;
-  margin-right: 15px;
-  margin-left: 15px;
+  margin: 15px;
   height: 35px;
-}
-
-#search-input #search-text {
-  height: 14px;
-  border-style: none;
-  border-color: inherit;
-  border-width: 0;
-  width: 207px;
-  margin-top: 3px;
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.0em;
-  color: #bcbcbc;
-  letter-spacing: 0px;
-}
-
-#search-input #autoSuggestResults {
-  display: none;
-  position: absolute;
-  z-index: 2;
-  width: 794px;
-  margin-left: 15px;
-  margin-top: 36px;
-  background-color: white;
-  border: 1px solid #999;
-  box-shadow: 3px 3px 3px #AAA;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  font-family: Verdana;
-  font-size: 8pt;
-  color: #999;
-  border-bottom-right-radius: 2px;
-  border-bottom-left-radius: 2px;
-}
-
-.gobutton #searchGoLink.disableGoButton {
-  visibility: hidden;
-}
-
-.fa-search-mobile {
-  color: #fff !important;
-  font-size: 20px !important;
-  display: inline-block;
-  float: right;
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-bottom: 24px;
-  padding-top: 1.3em;
-}
-
-.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
-  max-height: none;
-}
-
-.nav > a > li:focus, .nav > a > li:hover {
-  background-color: transparent;
-}
-
-.nav .open > a, .nav .open > a:focus, .nav .open > a:hover {
-  background-color: transparent;
-  border-color: transparent;
-}
-
-.search-input-mobile {
-  display: none;
-}
-
-#content-nav {
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-style: normal;
-  letter-spacing: 0px;
-  font-weight: 700;
-  padding-left: 3px;
-  color: #6E6E6E;
-  border: none;
-  width: 100%;
-}
-
-#content-nav-mobile {
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-style: normal;
-  letter-spacing: 0px;
-  font-weight: 500;
-  padding-left: 3px;
-  color: #6E6E6E;
-  border: none;
-  width: 100%;
-  display: none;
-}
-
-.fa-search-opened-mobile {
-  color: #007dc3 !important;
-  padding-top: 10px;
-  font-size: 1.2em;
-  padding-right: 30px;
-  padding-left: 50px;
-  padding-bottom: 12px;
-  top: 0.0em;
-  border-radius: 5px 0 0 5px;
-  cursor: unset;
-  z-index: 1;
-}
-
-.menu-last {
-  margin-right: 0em;
-  border-right: none !important;
-}
-
-.nav > a > li {
-  padding-left: 0px;
-  padding-top: 3px;
-}
-
-.mobile-header {
-  cursor: pointer;
+  float: left;
 }
 
 .faculty-staff-students a {
@@ -7861,44 +7558,9 @@ header {
   display: none;
 }
 
-.fss-pipe {
-  padding-left: 10px !important;
-}
-
 col-xs-12, .faculty-staff-students {
   text-align: right;
   margin-top: -35px;
-}
-
-.navbar-nav > a > li {
-  line-height: 0.1em !important;
-  margin-top: 0.5em;
-  margin-bottom: 0.2em;
-}
-
-.nav > li > a {
-  -webkit-transition: font-weight .15s ease;
-  -moz-transition: font-weight .15s ease;
-  -o-transition: font-weight .15s ease;
-  transition: font-weight .15s ease;
-}
-
-.nav > li > a:hover, .nav > li > a:focus {
-  background-color: transparent;
-  color: #001e36;
-}
-
-.container .pushdown-menu {
-  padding-left: 0em !important;
-  border-right: none;
-}
-
-.navbar-toggle {
-  margin-bottom: 0em !important;
-  margin-right: 0em !important;
-  margin-top: 0em !important;
-  padding: 15px !important;
-  display: block;
 }
 
 #nav-faculty {
@@ -7919,16 +7581,6 @@ col-xs-12, .faculty-staff-students {
 
 #nav-alumni {
   width: auto;
-}
-
-#nav-search {
-  width: 60px;
-  padding-top: 4px;
-}
-
-#nav-search-close {
-  background-color: transparent;
-  border-color: transparent;
 }
 
 a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, a[name="E"]:before, a[name="F"]:before, a[name="G"]:before, a[name="H"]:before, a[name="I"]:before, a[name="J"]:before, a[name="K"]:before, a[name="L"]:before, a[name="M"]:before, a[name="N"]:before, a[name="O"]:before, a[name="P"]:before, a[name="Q"]:before, a[name="R"]:before, a[name="S"]:before, a[name="T"]:before, a[name="U"]:before, a[name="V"]:before, a[name="W"]:before, a[name="X"]:before, a[name="Y"]:before, a[name="Z"]:before {
@@ -7959,12 +7611,6 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
     border-top: 170px solid #ccc;
   }
 }
-@media screen and (max-width: 450px) {
-  .fa-search-mobile {
-    padding-right: 10px;
-    padding-left: 10px;
-  }
-}
 @media (max-width: 991px) {
   #nav-admissions {
     padding-left: 0px;
@@ -7990,7 +7636,7 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
 }
 @media screen and (max-width: 991px) {
   body {
-    padding-top: 70px;
+    padding-top: 90px;
   }
 
   .navbar-collapse {
@@ -8073,7 +7719,7 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
 }
 @media (min-width: 992px) {
   body {
-    padding-top: 160px;
+    padding-top: 90px;
   }
 
   .header-container {
@@ -8091,8 +7737,7 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
   }
 
   .msudenver_logo {
-    height: 70px;
-    margin-bottom: 15px;
+    height: 65px;
   }
 
   .navbar .navbar-nav {
@@ -8104,8 +7749,15 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
     text-align: center;
   }
 
-  li.dropdown {
-    border-right: 2px solid #4cb4f2;
+  .dropdown-menu {
+    background-color: rgba(255, 255, 255, 0.95);
+    border-bottom: red;
+    border: 0px;
+    border-bottom: 3px solid #d11242;
+    border-radius: 0;
+  }
+
+  li {
     font-size: 0.74em;
     margin-top: 10px;
     margin-bottom: 7px;
@@ -8114,9 +7766,8 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
     margin-right: 0.8em;
   }
 
-  li.dropdown.last {
-    border-right: none;
-    margin-right: none;
+  li.dropdown {
+    border-right: 2px solid #003a6e;
   }
 
   ul.pushdown-menu > a li {
@@ -8133,20 +7784,6 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
 
   .container-dropdown {
     display: none;
-  }
-
-  li.dropdown {
-    padding: 5px 0px;
-    font-size: 1.08em;
-  }
-
-  #content-nav #search-input input[type=text] {
-    width: 65em;
-  }
-
-  #content-nav #nav-search-close {
-    top: -84px;
-    left: 14em;
   }
 
   #content-nav {
@@ -8167,6 +7804,7 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
 
   .navbar-toggle {
     display: none;
+    display: none;
   }
 
   .mobile-header > .fa.fa-chevron-down {
@@ -8183,21 +7821,6 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
 
   .fac-staf-stu-mobile {
     display: none;
-  }
-
-  #content-nav {
-    letter-spacing: 0px;
-    font-weight: 500;
-  }
-
-  .mobile-header {
-    margin-top: 5px;
-  }
-
-  .athletics-header {
-    margin-top: 5px;
-    padding-left: 0px;
-    padding-right: 0px;
   }
 
   #content-nav #nav-search-close {
@@ -8240,7 +7863,7 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
     font-size: 18px;
   }
 
-  li.dropdown {
+  .nav > li * {
     padding: 5px 0px;
     font-size: 1.33em;
   }
@@ -8290,10 +7913,6 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
 
   .apply-button {
     font-size: 1.2em;
-  }
-
-  .pushdown-menu {
-    height: 29em;
   }
 }
 .msudenver_logo_change {
@@ -9353,6 +8972,104 @@ a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, 
     font-size: 1.5rem;
   }
 }
+.btn {
+  transition: opacity 250ms ease-in-out;
+  text-align: left;
+  white-space: normal;
+  border: 0px solid transparent;
+}
+
+.btn:hover {
+  opacity: 1.5;
+  transition: opacity 250ms ease-in-out;
+}
+
+.btn-primary a {
+  color: #fff;
+}
+
+.btn-primary a a:hover {
+  text-decoration: none;
+}
+
+.custombtn {
+  margin-bottom: 15px;
+  width: 100%;
+}
+
+.custombtn {
+  background: #e5e5e5;
+  color: #00447c uppercase;
+  font-family: 'Gotham A', 'Gotham B', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.0rem;
+}
+
+.blue {
+  background: #007DC3;
+}
+
+.lightblue {
+  background: #4CB4F2;
+}
+
+.gray {
+  background: #A7A9AC;
+}
+
+.darkgray {
+  background: #919195;
+}
+
+.lightgray {
+  background: #bcbaba;
+}
+
+.white {
+  background: #fff;
+  color: #000;
+}
+
+.black {
+  background: #000;
+  color: #fff;
+}
+
+.contentlink {
+  background: #1b557a;
+}
+
+.rowdyblue {
+  background: #00447c;
+  color: #fff !important;
+}
+
+.rowdyblue:hover {
+  background: #003663;
+  color: #fff !important;
+}
+
+.rowdyred {
+  background: #c50f3c;
+  color: #fff !important;
+}
+
+.rowdyred:hover {
+  background: #ad0d35;
+  color: #fff !important;
+}
+
+.rowdygray {
+  background: #717073;
+  color: #fff !important;
+}
+
+.rowdygray:hover {
+  background: #646366;
+  color: #fff !important;
+}
+
 /**
     Site-wide footer
 **/
