remove left padding if img-responsive in a well

--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -279,3 +279,7 @@ a.t4Edit-page:hover {
     padding-top: 15px;
     padding-bottom: 15px;
 }
+
+.well > .img-responsive {
+  padding-left: 0px;
+}
